# bcros-common

./: .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  CONTRIBUTING.md  README.md  codecov.yaml
.github/workflows/: doc-api-cd.yaml  doc-api-ci.yaml  documents-ui-cd.yaml  documents-ui-ci.yaml  notify-api-cd.yaml  notify-api-ci.yaml  notify-delivery-cd-ocp.yaml  notify-delivery-cd.yaml  notify-delivery-ci.yaml  osv-scanner.yml  report-api-cd.yml  report-api-ci.yml  status-api-cd.yml  status-api-ci.yml
doc-legacy-migration/: Dockerfile  README.md  env_example  pyproject.toml
documents-ui/: .env.example  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
notify-api/: pyproject.toml
notify-delivery/: .coverage  coverage.xml  pyproject.toml
notify-service/: create_pubsub_bc_notify.sh  docker-compose.yml  run_local.sh
notify-service/notify-api/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml  run_local.sh  run_local_db.sh  update_db.sh  wsgi.py
notify-service/notify-api/devops/: vaults.gcp.env
notify-service/notify-api/migrations/: env.py
notify-service/notify-api/migrations/versions/: 0010-d6a8ffda6b9c_add_new_provider.py  0011-328095fcc390_move_public_schema_to_custom_schema.py  0012_5b8087f8b7e3_add_notification_id.py  0013_add_bc_notify_provider.py
notify-service/notify-api/src/notify_api/: __init__.py  config.py  metadata.py
notify-service/notify-api/src/notify_api/exceptions/: __init__.py  errorhandlers.py
notify-service/notify-api/src/notify_api/models/: __init__.py  attachment.py  callback.py  content.py  db.py  email.py  notification.py  notification_history.py  safe_list.py
notify-service/notify-api/src/notify_api/resources/: __init__.py  constants.py  version_endpoint.py
notify-service/notify-api/src/notify_api/resources/meta/: __init__.py  meta.py
notify-service/notify-api/src/notify_api/resources/ops/: __init__.py  ops.py
notify-service/notify-api/src/notify_api/resources/v1/: __init__.py  notify.py
notify-service/notify-api/src/notify_api/resources/v2/: __init__.py  callback.py  email_validation.py  resend.py  safe_list.py
notify-service/notify-api/src/notify_api/services/: __init__.py  notify_service.py
notify-service/notify-api/src/notify_api/static/: openapi.yaml
notify-service/notify-api/src/notify_api/utils/: auth.py  base.py  enums.py  util.py
notify-service/notify-api/tests/: conftest.py
notify-service/notify-api/tests/factories/: attachment.py  content.py  jwt.py  notification.py
notify-service/notify-api/tests/unit/: test_app_initialization.py
notify-service/notify-api/tests/unit/conf/: test_alembic.py  test_config_sidecar.py
notify-service/notify-api/tests/unit/models/: __init__.py  test_attachment.py  test_callback.py  test_content.py  test_driver_compatibility.py  test_email.py  test_model_integration.py  test_notification.py  test_notification_history.py  test_notification_history_id.py  test_safe_list.py
notify-service/notify-api/tests/unit/resources/ops/: test_ops.py
notify-service/notify-api/tests/unit/resources/v1/: __init__.py  test_notify.py  test_notify_find_history.py
notify-service/notify-api/tests/unit/resources/v2/: test_callback.py  test_email_validation.py  test_resend.py  test_safe_list.py
notify-service/notify-api/tests/unit/services/: test_notify.py  test_notify_service.py
notify-service/notify-api/tests/unit/utils/: test_base.py
notify-service/notify-delivery/: .dockerignore  .env.sample  Dockerfile  README.md  gunicorn_config.py  pyproject.toml  wsgi.py
notify-service/notify-delivery/devops/: vaults.gcp.env  vaults.ocp.env
notify-service/notify-delivery/devops/gcp/: clouddeploy.yaml
notify-service/notify-delivery/src/notify_delivery/: __init__.py  config.py
notify-service/notify-delivery/src/notify_delivery/resources/: __init__.py  bc_notify.py  bc_notify_housing.py  email_smtp.py  gc_notify.py  gc_notify_housing.py  utils.py
notify-service/notify-delivery/src/notify_delivery/services/: __init__.py
notify-service/notify-delivery/src/notify_delivery/services/gcp_queue/: __init__.py  gcp_auth.py
notify-service/notify-delivery/src/notify_delivery/services/providers/: bc_notify.py  bc_notify_housing.py  email_smtp.py  gc_notify.py  gc_notify_housing.py
notify-service/notify-delivery/src/notify_delivery/utils/: __init__.py  util.py
notify-service/notify-delivery/tests/: __init__.py  conftest.py
notify-service/notify-delivery/tests/unit/: test_app_initialization.py  test_config_sidecar.py  test_gcnotify.py  test_smtp.py
notify-service/notify-delivery/tests/unit/providers/: test_email_smtp_provider.py  test_gcnotify_provider.py
notify-service/notify-delivery/tests/unit/resources/: test_bc_notify_housing_resource.py  test_bc_notify_resource.py  test_email_smtp_resource.py  test_gc_notify_housing_resource.py  test_gc_notify_resource.py  test_utils.py
notify-service/notify-delivery/tests/unit/services/: test_email_smtp_service.py
notify-service/notify-delivery/tests/unit/services/gcp_queue/: test_gcp_auth.py
notify-service/notify-delivery/tests/unit/services/providers/: test_bc_notify.py  test_bc_notify_housing.py  test_email_smtp_provider.py  test_gc_notify.py  test_gc_notify_housing.py
pdf-gen-api/: .gitignore  Makefile  README.md  notes.py  requirements.txt  setup.py
report-api/: Dockerfile  MANIFEST.in  Makefile  README.md  config.py  logging.conf  requirements.txt
report-api-gotenberg/: README.md  docker-compose.yaml
status-api/: Dockerfile  env.sample  gunicorn_config.py  pyproject.toml  wsgi.py
status-api/devops/: vaults.ocp.env
status-api/src/status_api/: __init__.py  config.py  errorhandlers.py  logging.yaml
status-api/src/status_api/resources/: __init__.py  meta.py  ops.py  status.py  whatsnew.py
status-api/src/status_api/services/: status.py
status-api/src/status_api/utils/: logging.py
status-api/tests/: conftest.py
status-api/tests/unit/api/: test_ops.py  test_status.py  test_whatsnew.py
status-api/tests/unit/services/: test_status.py
(+386 files in other folders)
